Fix memory leak and use larger shared memory buffer.