@@ -32,7 +32,6 @@ java \
 -XX:+PreserveFramePointer \
 -XX:+UseMembar \
 -XX:+AssumeMP \
--Xverify:none \
 -Djava.library.path=lib/ \
 -cp conf/:assembly/target/scala-${SCALA_VERSION}/jars/\*:examples/target/scala-${SCALA_VERSION}/jars/\*:sgx/target/\*:shm/target/\* \
 org.apache.spark.sgx.SgxMain 2>&1 | tee enclave-worker
